@@ -1,3 +1,5 @@
+2006/4/28 -- released version 20060428_trunk
+
 2006/4/27 -- released version 20060427_trunk
 
 2006/4/26 -- released version 20060426_trunk
